backend/infrastructure/scripts/infrastructure/kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: qrestor-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: "/auth/(.*)"
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8097
